# ext4_binary_read

./: .gitignore  CMakeLists.txt  flags.h  interfaces.c  interfaces.h  main.c  readme.txt  structs.c  structs.h
structs/: group_descriptor.c  group_descriptor.h  inode_table.c  inode_table.h  super_block.c  super_block.h
